# work

./: FE.txt  README.md  docker-compose.yml
backend/: Cargo.toml  rust.dockerfile
backend/migrations/: 0001_work.sql
backend/src/: main.rs
frontend/next_app/app/: layout.tsx  page.tsx
frontend/next_app/app/history/: page.tsx
